hphp/hack/test/typecheck/type_const_in_type_alias.php.exp
ERROR: File "type_const_in_type_alias.php", line 3, characters 13-16:
Type aliases to type constants are not supported (Parsing[1002])
ERROR: File "type_const_in_type_alias.php", line 4, characters 11-14:
Type aliases to type constants are not supported (Parsing[1002])
ERROR: File "type_const_in_type_alias.php", line 3, characters 13-13:
Unbound name: `C` (Naming[2049])
ERROR: File "type_const_in_type_alias.php", line 4, characters 11-11:
Unbound name: `C` (Naming[2049])
