hphp/hack/test/typecheck/type_const_in_type_alias.php
<?hh

newtype T = C::T;
type T2 = C::T;
